Feat: Using static files

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Castello</title>
+    <link rel="stylesheet" href="static/styles.css">
 </head>
 <body>
-    <h1>Castellão fi</h1>
+    <h1>I'm Castello</h1>
 </body>
 </html>
